--- a/app/src/main/res/layout/business_guide_add_layout.xml
+++ b/app/src/main/res/layout/business_guide_add_layout.xml
@@ -73,8 +73,8 @@
                                 android:id="@+id/email"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:inputType="textEmailAddress"
-                                android:text="First Business" />
+                                android:inputType="textEmailAddress" />
+                            <!--android:text="First Business"-->
                         </android.support.design.widget.TextInputLayout>
 
                         <LinearLayout
@@ -249,9 +249,11 @@
                             <android.support.design.widget.TextInputEditText
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:gravity="top|left|start"
                                 android:hint="@string/Optional"
-                                android:inputType="text"
-                                android:lines="3" />
+                                android:inputType="textMultiLine"
+                                android:lines="3"
+                                android:minLines="3" />
                         </LinearLayout>
 
                         <LinearLayout
@@ -270,9 +272,11 @@
                             <android.support.design.widget.TextInputEditText
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:gravity="top|left|start"
                                 android:hint="@string/Optional"
-                                android:inputType="text"
-                                android:lines="3" />
+                                android:inputType="textMultiLine"
+                                android:lines="3"
+                                android:minLines="3" />
                         </LinearLayout>
 
                         <android.support.v7.widget.AppCompatButton
@@ -284,7 +288,7 @@
                             android:elevation="4dp"
                             android:padding="@dimen/md_padding"
                             android:shadowColor="@color/black"
-                            android:text="@string/Submit"
+                            android:text="@string/RegisterBusiness"
                             app:layout_constraintTop_toBottomOf="@+id/faxLayout" />
 
                     </android.support.constraint.ConstraintLayout>
