--- a/app/src/main/res/layout/signup_layout.xml
+++ b/app/src/main/res/layout/signup_layout.xml
@@ -7,7 +7,6 @@
 
     <include layout="@layout/background_primary_layout" />
 
-
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
         android:layout_width="match_parent"
@@ -161,9 +160,11 @@
 
             <LinearLayout
                 android:id="@+id/termsAndConditionsLayout"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/businessOwnerCheckBox">
 
                 <android.support.v7.widget.AppCompatCheckBox
