--- a/app/src/main/res/layout/toolbar_main_layout.xml
+++ b/app/src/main/res/layout/toolbar_main_layout.xml
@@ -16,10 +16,13 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/title"
             style="@style/AppTheme.TitleTextAppearance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:shadowColor="@color/grayDarkTextColor"
+            android:shadowRadius="8"
             android:text="@string/app_name"
             android:textColor="@color/white" />
 
@@ -53,6 +56,7 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
+            android:contentDescription="@string/contentDescription"
             android:src="@mipmap/ic_profile_24dp" />
 
     </RelativeLayout>
