--- a/app/src/main/res/layout/toolbar_nearby_layout.xml
+++ b/app/src/main/res/layout/toolbar_nearby_layout.xml
@@ -21,7 +21,7 @@
             android:layout_centerInParent="true"
             android:shadowColor="@color/grayLightTextColor"
             android:shadowRadius="@integer/textShadow"
-            android:text="@string/nearByPharmacies"
+            android:text="@string/FindNearBy"
             android:textColor="@color/grayDarkTextColor"
             android:textStyle="bold" />
 
